Update to Jekyll tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>The New Normal Sentinel - You're What's Important To Us</title>
+		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
@@ -15,11 +15,11 @@
     		</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi - we are building this.</h1>
-				<p>There isn't anything here yet. Be patient!</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+			
+			{{ content }}
+			
+    		
+    		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:newnormalsentinel@gmail.com">email</a></li>
