--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/credo">Credo</a></li>
-        		<li><a href="/trending">Trending</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/nns/">Home</a></li>
+	        	<li><a href="/nns/credo">Credo</a></li>
+        		<li><a href="/nns/trending">Trending</a></li>
+        		<li><a href="/nns/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
