--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/nns/">Home</a></li>
+        		<li><a href="/">Home</a></li>
 	        	<li><a href="/nns/credo">Credo</a></li>
         		<li><a href="/nns/trending">Trending</a></li>
         		<li><a href="/nns/blog">Blog</a></li>
